--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
-  </head>
+   </head>
 <body>
    <div class="container">
      <h1>Lunch Checker</h1>
@@ -24,6 +24,7 @@
            <!-- Your message can go here. -->
          </div>
    </div>
-
+<script scr="script/angular.min.js></script>
+<script scr="script/app.js></script>
 </body>
 </html>
