--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
    </head>
-<body>
+<body ng-app="lunchCheck">
    <div class="container">
      <h1>Lunch Checker</h1>
 
