--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
    </head>
 <body ng-app="lunchCheck">
-   <div class="container">
+   <div class="container" ng-controller="MylunchCheckController">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
