--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
    </head>
-<body ng-app="lunchCheck">
-   <div class="container" ng-controller="MylunchCheckController">
+<body ng-app="LunchCheck">
+   <div class="container" ng-controller="MyLunchCheckController">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
