--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkInput()">Check If Too Much</button>
          </div>
-         <div class="form-group message" {{message}}>
+         <div class="form-group message" {{checkInput()}}>
            
            <!-- Your message can go here. -->
          </div>
