--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkInput()">Check If Too Much</button>
          </div>
-         <div class="form-group message" >
-           {{checkInput()}}
+         <div class="form-group message" {{checkInput()}}>
+           
            <!-- Your message can go here. -->
          </div>
    </div>
