--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>Lunch Checker</title>
     <meta charset="utf-8">
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="https://code.angularjs.org/1.5.8/angular.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
@@ -28,5 +27,6 @@
            <!-- Your message can go here. -->
          </div>
    </div>
+  <script src="app.js"></script>
 </body>
 </html>
