--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Lunch Checker</title>
     <meta charset="utf-8">
-    <script src="https://code.angularjs.org/1.5.8/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.6.3/angular.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
