--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <title>Lunch Checker</title>
     <meta charset="utf-8">
-    <script src="https://code.angularjs.org/1.6.3/angular.js"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
+    <script src="angular.min.js"></script>
    </head>
 <body ng-app='LunchChecker'>
    <div class="container" ng-controller='MyLunchCheckcontroller'>
