--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="angular.min.js"></script>
    </head>
 <body ng-app='LunchChecker'>
-   <div class="container" ng-controller='MyLunchCheckcontroller'>
+   <div class="container" ng-controller='MyLunchCheckController'>
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
