--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkInput()">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-          {{values}} 
+         <div class="form-group message" ng-module='values'>
+         
            <!-- Your message can go here. -->
          </div>
    </div>
