--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkInput()">Check If Too Much</button>
          </div>
-        <div class="form-group message"> {{checkInput()}}</div>
+        <div class="form-group message"> {{values}}</div>
    </div>
   <script src="app.js"></script>
 </body>
